fix: panel resposiveness on mobile &screens < 768

--- a/44frontend/src/components/Panel/Panel.module.scss
+++ b/44frontend/src/components/Panel/Panel.module.scss
@@ -1,6 +1,8 @@
 @use "../../utitlities/themeColors";
 @import "../../utitlities/functions";
 
+$tablets: 768;
+
 .container {
   width: 100%;
   border-top: pix-rem(1) solid themeColors.$default_foreground;
@@ -38,16 +40,15 @@
       border-color: themeColors.$primary_color;
       color: themeColors.$primary_color;
 
-      @include mediaQueryMax(768px) {
+      @include mediaQueryMax(#{$tablets}px) {
         width: 60%;
         padding: pix-rem(10);
       }
 
       .image__container {
         opacity: 0.7;
-
         img {
-          filter: saturate(0) blur(0.2px);
+          filter: saturate(0) blur(0px);
         }
       }
     }
@@ -64,7 +65,7 @@
       opacity: 1;
       color: themeColors.$primary_color;
 
-      @include mediaQueryMax(768px) {
+      @include mediaQueryMax(#{$tablets}px) {
         width: 40%;
       }
 
@@ -97,7 +98,7 @@
       font-size: clamp(pix-rem(20), 6vw, pix-rem(130));
     }
 
-    @include mediaQueryMax(768px) {
+    @include mediaQueryMax(#{$tablets}px) {
       font-size: clamp(pix-rem(40), 8vw, pix-rem(130));
     }
 
@@ -106,24 +107,33 @@
       z-index: -1;
       top: 0;
       bottom: 0;
-      right: 0;
+      left: 0;
       height: 100%;
       width: 200px;
       opacity: 0;
-      transition: opacity 0.4s;
+      transition: opacity 0.4s, left 0s;
+
+      @include mediaQueryMax(#{$tablets}px) {
+        opacity: 0.4;
+      }
 
       img {
+        transform: translateX(-50%);
         object-fit: cover;
         height: 100%;
         width: 100%;
         filter: saturate(0) blur(5px);
         transition: filter 0.4s;
+
+        @include mediaQueryMax(#{$tablets}px) {
+          transform: translateX(0);
+          filter: saturate(0) blur(0px);
+        }
       }
 
       &.flipped {
-        right: unset;
-        left: 0;
-        width: 300px;
+        right: 0;
+        left: unset;
       }
     }
   }
@@ -159,7 +169,7 @@
     margin-top: auto;
     margin-bottom: auto;
 
-    @include mediaQueryMax(768px) {
+    @include mediaQueryMax(#{$tablets}px) {
       font-size: pix-rem(10);
     }
 
@@ -205,4 +215,8 @@
 
 .flipped {
   flex-direction: row-reverse;
+}
+
+:export {
+  tabletScreenSize: $tablets;
 }
